# CometsApi

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
db/: Cargo.toml
db/src/: database.rs  db.rs  files.rs  lib.rs  project.rs  user.rs
graphql/: Cargo.toml
graphql/src/: context.rs  lib.rs  mutation.rs  query.rs
migrations/: 20210426095540_create-user-table.up.sql  20210426095547_create-projects-table.up.sql  20210426095557_link-users-projects-table.down.sql  20210426095557_link-users-projects-table.up.sql  20210426121739_create-file-table.down.sql  20210426121739_create-file-table.up.sql  20210426122057_create-edit-table.down.sql  20210426122057_create-edit-table.up.sql
migrations/2021-04-12-200535_create_user_table/: up.sql
migrations/2021-04-14-105110_create_project_table/: up.sql
migrations/2021-04-14-105501_link_project_user_table/: up.sql
migrations/2021-04-15-064433_create_edit_table/: down.sql  up.sql
model/: Cargo.toml
model/src/: edit.rs  error.rs  file.rs  files.rs  lib.rs  project.rs  user.rs
model/src/dto/: auth.rs
model/src/sql/edit/: create.sql  get_for_project.sql  get_last_for_project.sql
model/src/sql/file/: create.sql  delete.sql  get.sql  getForProject.sql  getall.sql  update.sql
model/src/sql/project/: add_author.sql  create.sql  delete.sql  get_authors.sql  get_by_uuid.sql  remove_author.sql  update.sql
model/src/sql/user/: create.sql  get_projects.sql  update.sql
schema/: Cargo.toml
schema/src/: context.rs  lib.rs
schema/src/dto/: auth.rs  file.rs  mod.rs  project.rs
schema/src/error/: auth.rs  common.rs  mod.rs
schema/src/object/: edit.rs  file.rs  mod.rs  project.rs  user.rs
server/: Cargo.toml
server/src/: main.rs
service/: Cargo.toml
service/src/: auth.rs  file.rs  lib.rs  project.rs  user.rs
src/: main.rs
src/graphql/: context.rs  mod.rs  mutation.rs  query.rs
src/model/: user.rs
src/sql/: mod.rs  user.rs
utils/: Cargo.toml
utils/src/: auth.rs  env.rs  lib.rs
