[package]
name = "db"
version = "0.1.0"
authors = ["LopsemPyier <LopsemPyier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "postgres", "uuid", "chrono", "json", "macros" ] }
utils = { path = "../utils" }
model = { path = "../model" }