[package]
name = "graphql"
version = "0.1.0"
authors = ["LopsemPyier <LopsemPyier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.0", features = ["uuid", "chrono", "tracing"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
service = { path = "../service" }
schema = { path = "../schema" }
utils = { path = "../utils" }