[package]
name = "server"
version = "0.1.0"
authors = ["LopsemPyier <LopsemPyier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.0", features = ["uuid", "chrono", "tracing"] }
async-graphql-actix-web = "2.0"
actix-cors = "0.5.0"
env_logger = "0.7.1"
actix-web = "3"
dotenv = "0.15.0"
futures = "0.3.5"
http = "0.2"
db = { path = "../db" }
graphql = { path = "../graphql" }
utils = { path = "../utils" }