[package]
name = "utils"
version = "0.1.0"
authors = ["LopsemPyier <LopsemPyier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
rust-argon2 = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0.124", features = ["derive"] }
jsonwebtoken = "7.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }